sumo/tests/duarouter/alternatives/style1_input/errors/routealt/routealt_id_missing/errors.duarouter
Error: Attribute 'id' is missing in definition of a routeDistribution.
Quitting (on error).
